--- a/frontend/src/html/admin/admin_task_list.html
+++ b/frontend/src/html/admin/admin_task_list.html
@@ -249,7 +249,7 @@
         </div>
         <!-- タスクリストコンテナ -->
         <div id="task_container" class="border-4 rounded-t-lg w-11/12 mx-auto mt-10 pt-12 px-20 overflow-scroll">
-            <select name="user" id="user" class="text-3xl border-4 rounded-3xl w-64 mx-auto px-5 py-2">
+            <select name="user" id="user" class="text-3xl border-4 rounded-3xl w-72 mr-auto ml-auto px-5 py-2">
                 <option value="0">おかあさん</option>
                 <option value="1">おとうさん</option>
                 <option value="2">おにいさん</option>
