--- a/frontend/src/html/admin/task_create.html
+++ b/frontend/src/html/admin/task_create.html
@@ -177,7 +177,7 @@
     <h1 class="text-4xl flex justify-center ">タスクを新規作成</h1>
 </header>
 <main>
-    
+    <!-- TODO 作成内容 -->
 </main>
     
 </body>
