--- a/frontend/src/html/user/home.html
+++ b/frontend/src/html/user/home.html
@@ -122,6 +122,7 @@
 
         /* メニューのスタイル */
         .menu {
+            background: rgb(255, 242, 225);
             position: fixed;
             left: 0;
             top: 0;
@@ -188,13 +189,13 @@
     </style>
 </head>
 
-<body class="bg-customerized-orange m-0 p-0 box-border font-kiwi-maru">
+<body class=" m-0 p-0 box-border font-kiwi-maru">
     <!-- グレイレイヤー -->
     <div class="overlay">
     </div>
 
     <!-- header要素 -->
-    <header class="h-40 bg-customerized-orange flex items-center">
+    <header class="h-40  flex items-center">
         <!-- ハンバーガーメニュー -->
         <button type="button" class="btn js-btn">
             <span class="btn-line"></span>
@@ -202,7 +203,7 @@
 
         <!-- メニューオーバーレイ -->
         <nav>
-            <ul class="menu bg-customerized-orange text-left">
+            <ul class="menu text-left">
                 <li class="menu-list"><a href="#"
                         class="text-9xl text-teal-500 pt-24 pb-2 px-14 mb-32 block font-yusei-magic">ぶんたん</a></li>
                 <li class="menu-list"><a href="#"
