Google カレンダーに変更

--- a/frontend/src/html/user/home.html
+++ b/frontend/src/html/user/home.html
@@ -277,22 +277,9 @@
         </div>
         <!-- カレンダー -->
         <div class="mt-32">
-            <table class="w-full border-collapse">
-                <thead>
-                    <tr>
-                        <th>日</th>
-                        <th>月</th>
-                        <th>火</th>
-                        <th>水</th>
-                        <th>木</th>
-                        <th>金</th>
-                        <th>土</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- カレンダーの日付部分はJavaScriptで動的に生成する例を後述 -->
-                </tbody>
-            </table>
+            <iframe class="aspect-auto w-full"
+                src="https://calendar.google.com/calendar/embed?src=446a34cdb756004b1df87ce80e628cf406e81aa5ddfba092b2576de5e036e82c%40group.calendar.google.com&ctz=Asia%2FTokyo"
+                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </main>
 
@@ -308,45 +295,7 @@
             });
         });
 
-        // かレンダーのjs
-        document.addEventListener('DOMContentLoaded', function () {
-                const calendarBody = document.querySelector('tbody');
-                // 月の日付を動的に生成し、イベントリスナーを追加する
-                for (let day = 1; day <= 30; day++) {
-                    const cell = document.createElement('td');
-                    cell.innerText = day;
-                    cell.addEventListener('click', function () {
-                        const event = prompt('イベントを追加:');
-                        if (event) {
-                            cell.innerHTML += `<div>${event}</div>`;
-                        }
-                    });
-                    calendarBody.appendChild(cell);
-                }
-        });
-
-        // 今日の日付の背景色を変更
-        document.addEventListener('DOMContentLoaded', function () {
-                const today = new Date();
-                const calendarCells = document.querySelectorAll('td');
-                calendarCells.forEach(cell => {
-                    if (cell.innerText == today.getDate()) {
-                        cell.style.backgroundColor = '#ffcc00'; // 今日の日付に黄色の背景色を適用
-                    }
-                });
-            });
-
-            // 今の段階だと使用しないためコメントアウトにしています
-        //     // カレンダーを更新する関数
-        // function updateCalendar() {
-        //         const selectedDate = document.getElementById('datePicker').value;
-        //         const dateParts = selectedDate.split('-');
-        //         const year = dateParts[0];
-        //         const month = dateParts[1];
-        //         const day = dateParts[2];
-        //         // ここでカレンダーの表示を更新
-        //         alert(`選択された日付: ${year}年${month}月${day}日`);
-        //     }
+        
     </script>
 </body>
 
