キャレンダーのHTML要素の調整

--- a/frontend/src/html/user/home.html
+++ b/frontend/src/html/user/home.html
@@ -260,7 +260,14 @@
             </div>
         </div>
         <!-- カレンダー -->
-        <div id="calendar" class="mt-32"></div>
+        <div class="cal-center">
+            <div class="cal-navi flex justify-around">
+                <i class="material-icons">arrow_back_ios</i>
+                <i class="material-icons">arrow_forward_ios</i>
+            </div>
+                <div id="calendar" class="mt-10 text-4xl">
+                </div>
+        </div>
     </main>
 
 
